versioned_docs/version-0.27.0/api/server/index.md
# @fishjam-cloud/js-server-sdk

Server-side Node.js SDK for creating and managing Fishjam rooms, peers, agents, and receiving real-time server notifications.

## Client

- [FishjamClient](classes/FishjamClient.md)
- [FishjamWSNotifier](classes/FishjamWSNotifier.md)

## Other

- [PeerStatus](enumerations/PeerStatus.md)
- [RoomType](enumerations/RoomType.md)
- [VideoCodec](enumerations/VideoCodec.md)
- [BadRequestException](classes/BadRequestException.md)
- [FishjamAgent](classes/FishjamAgent.md)
- [FishjamBaseException](classes/FishjamBaseException.md)
- [FishjamNotFoundException](classes/FishjamNotFoundException.md)
- [ForbiddenException](classes/ForbiddenException.md)
- [MissingFishjamIdException](classes/MissingFishjamIdException.md)
- [PeerNotFoundException](classes/PeerNotFoundException.md)
- [RoomNotFoundException](classes/RoomNotFoundException.md)
- [ServiceUnavailableException](classes/ServiceUnavailableException.md)
- [UnauthorizedException](classes/UnauthorizedException.md)
- [UnknownException](classes/UnknownException.md)
- [MoqToken](interfaces/MoqToken.md)
- [MoqTokenConfig](interfaces/MoqTokenConfig.md)
- [PeerOptionsAgent](interfaces/PeerOptionsAgent.md)
- [PeerOptionsVapi](interfaces/PeerOptionsVapi.md)
- [PeerOptionsWebRTC](interfaces/PeerOptionsWebRTC.md)
- [RoomConfig](interfaces/RoomConfig.md)
- [ServerMessage](interfaces/ServerMessage.md)
- [StreamerToken](interfaces/StreamerToken.md)
- [ViewerToken](interfaces/ViewerToken.md)
- [AgentCallbacks](type-aliases/AgentCallbacks.md)
- [AgentEvents](type-aliases/AgentEvents.md)
- [AgentTrack](type-aliases/AgentTrack.md)
- [AudioCodecParameters](type-aliases/AudioCodecParameters.md)
- [Brand](type-aliases/Brand.md)
- [ChannelAdded](type-aliases/ChannelAdded.md)
- [ChannelRemoved](type-aliases/ChannelRemoved.md)
- [CloseEventHandler](type-aliases/CloseEventHandler.md)
- [ErrorEventHandler](type-aliases/ErrorEventHandler.md)
- [ExpectedAgentEvents](type-aliases/ExpectedAgentEvents.md)
- [ExpectedEvents](type-aliases/ExpectedEvents.md)
- [FishjamConfig](type-aliases/FishjamConfig.md)
- [IgnoredEvents](type-aliases/IgnoredEvents.md)
- [IncomingTrackData](type-aliases/IncomingTrackData.md)
- [IncomingTrackImage](type-aliases/IncomingTrackImage.md)
- [NotificationEvents](type-aliases/NotificationEvents.md)
- [OutgoingTrackData](type-aliases/OutgoingTrackData.md)
- [Peer](type-aliases/Peer.md)
- [PeerAdded](type-aliases/PeerAdded.md)
- [PeerConnected](type-aliases/PeerConnected.md)
- [PeerCrashed](type-aliases/PeerCrashed.md)
- [PeerDeleted](type-aliases/PeerDeleted.md)
- [PeerDisconnected](type-aliases/PeerDisconnected.md)
- [PeerId](type-aliases/PeerId.md)
- [PeerMetadataUpdated](type-aliases/PeerMetadataUpdated.md)
- [PeerOptions](type-aliases/PeerOptions.md)
- [PeerType](type-aliases/PeerType.md)
- [Room](type-aliases/Room.md)
- [RoomCrashed](type-aliases/RoomCrashed.md)
- [RoomCreated](type-aliases/RoomCreated.md)
- [RoomDeleted](type-aliases/RoomDeleted.md)
- [RoomId](type-aliases/RoomId.md)
- [StreamerConnected](type-aliases/StreamerConnected.md)
- [StreamerDisconnected](type-aliases/StreamerDisconnected.md)
- [Track](type-aliases/Track.md)
- [TrackAdded](type-aliases/TrackAdded.md)
- [TrackId](type-aliases/TrackId.md)
- [TrackMetadataUpdated](type-aliases/TrackMetadataUpdated.md)
- [TrackRemoved](type-aliases/TrackRemoved.md)
- [TrackType](type-aliases/TrackType.md)
- [ViewerConnected](type-aliases/ViewerConnected.md)
- [ViewerDisconnected](type-aliases/ViewerDisconnected.md)
- [ServerMessage](variables/ServerMessage.md)
